--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
 			<section class="part__first first-part">
                 <div class="first-part__container">
                     <div class="first-part__content">
-                        <h1 class="first-part__title">Your <span class="span__title">favourite food</span> delivered <span class="span__title">hot & fresh</span></h1>
-                        <div class="first-part__subtitle"><span class="span__subtitle">HEALTHY SWITCHER</span> chefs do all the prep work, like peeling, chopping & marinating, so you can cook a fresh homemade dinner in just 15 minutes.</div>
+                        <h1 class="first-part__title">Your <span class="title">favourite food</span> delivered <span class="title">hot & fresh</span></h1>
+                        <div class="first-part__subtitle"><span class="subtitle">HEALTHY SWITCHER</span> chefs do all the prep work, like peeling, chopping & marinating, so you can cook a fresh homemade dinner in just 15 minutes.</div>
                         <a class="first-part__button button" href="#">Order now</a>
                         <div class="first-part__description">
                             <div class="first-part__item">
@@ -116,7 +116,7 @@
             <section class="part__fourth fourth-part">
                 <div class="fourth-part__container">
                     <div class="fourth-part__title main-title">
-                        <h2 class="fourth-part__text   main-title__text"><span class="span__main-title">Dish Of The Day</span></h2>
+                        <h2 class="fourth-part__text   main-title__text"><span class="main-title">Dish Of The Day</span></h2>
                         <div class="main-title__line"></div>
                     </div>
                     <div class="fourth-part__content">
@@ -300,7 +300,7 @@
             <section class="part__fifth fifth-part">
                 <div class="fifth-part__container">
                     <div class="fifth-part__title main-title">
-                        <h2 class="fifth-part__text   main-title__text"><span class="span__main-title">This month's chefs</span></h2>
+                        <h2 class="fifth-part__text   main-title__text"><span class="main-title">This month's chefs</span></h2>
                         <div class="main-title__line"></div>
                     </div>
                     <div class="fifth-part__content">
@@ -377,7 +377,7 @@
             <section class="part__sixth sixth-part">
                 <div class="sixth-part__container">
                     <div class="sixth-part__title main-title">
-                        <h2 class="sixth-part__text   main-title__text"><span class="span__main-title">Recipies from our chefs</span></h2>
+                        <h2 class="sixth-part__text   main-title__text"><span class="main-title">Recipies from our chefs</span></h2>
                         <div class="main-title__line"></div>
                     </div>
                     <div class="sixth-part__content">
